Sign up align fixed

--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ nav {
 
 .sign-up {
   display: grid;
+  align-items: center;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
